fix(client): Hide arrows on number input on firefox

--- a/Website/src/globalStyle.css
+++ b/Website/src/globalStyle.css
@@ -97,6 +97,9 @@ input[type="search"]::-webkit-search-cancel-button:active {
 input[type="number"]::-webkit-inner-spin-button {
 	appearance: none;
 }
+input[type=number] {
+	-moz-appearance: textfield;
+}
 
 #search {
 	font-size: 20pt;
